--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -80,7 +80,7 @@
 }
 
 .main{
-  margin: auto;
+  margin-top: 50px;
   border: 1px solid MediumAquamarine;
   display: flex;
   justify-content:space-around;
@@ -92,20 +92,20 @@
   flex-direction: column;
   /* Create temporary borders to make life easier*/
   border: 1px solid yellow;
-  margin: 3px 5px 0px 5px;
+  /*margin: 3px 5px 0px 5px;*/
   padding-top: 20px;
 }
 
 .large {
   /* Create the width of the flex container*/
-  width: 630px;
+  min-width: 630px;
   /* Create temporary borders to make life easier*/
   border: 1px solid purple;
 }
 
 .medium {
   /* Create the width of the flex container*/
-  width: 300px;
+  min-width: 300px;
   /* Create temporary borders to make life easier*/
   border: 1px solid brown;
 
@@ -113,7 +113,7 @@
 
 .small {
   /* Create the width of the flex container*/
-  width: 240px;
+  min-width: 240px;
   /* Create temporary borders to make life easier*/
   border: 1px solid pink;
 }
