--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -74,7 +74,7 @@
 }
 
 .spacer{
-  padding-top: 50px;
+  /* padding-top: 50px;*/
   max-width: 95%;
   margin: auto;
 }
@@ -92,20 +92,20 @@
   flex-direction: column;
   /* Create temporary borders to make life easier*/
   border: 1px solid yellow;
-  /*margin: 3px 5px 0px 5px;*/
+  margin: 3px 5px 0px 5px;
   padding-top: 20px;
 }
 
 .large {
   /* Create the width of the flex container*/
-  min-width: 630px;
+  width: 630px;
   /* Create temporary borders to make life easier*/
   border: 1px solid purple;
 }
 
 .medium {
   /* Create the width of the flex container*/
-  min-width: 300px;
+  width: 300px;
   /* Create temporary borders to make life easier*/
   border: 1px solid brown;
 
@@ -113,7 +113,7 @@
 
 .small {
   /* Create the width of the flex container*/
-  min-width: 240px;
+  width: 240px;
   /* Create temporary borders to make life easier*/
   border: 1px solid pink;
 }
