--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -74,7 +74,7 @@
 }
 
 .spacer{
-  margin-top: 50px
+  /* margin-top: 50px */
   border: 1px solid cyan;
   max-width: 95%;
   margin: auto;
@@ -93,7 +93,7 @@
   flex-direction: column;
   /* Create temporary borders to make life easier*/
   border: 1px solid yellow;
-  margin: 3px 5px 0px 5px;
+  margin: 50px 5px 0px 5px;
   padding-top: 20px;
 }
 
