--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -84,7 +84,7 @@
   margin: auto;
   border: 1px solid MediumAquamarine;
   display: flex;
-  justify-content:space-around;
+  justify-content:center;
 }
 
 .column {
@@ -115,7 +115,7 @@
 }
 
 .small {
-  margin: 0;  
+  margin: 0;
   /* Create the width of the flex container*/
   width: 240px;
   /* Create temporary borders to make life easier*/
