Restore  main justy-content to between from centre.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -84,7 +84,7 @@
   margin: auto;
   border: 1px solid MediumAquamarine;
   display: flex;
-  justify-content:center;
+  justify-content:space-between;
 }
 
 .column {
