--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -98,7 +98,7 @@
 }
 
 .large {
-  margin: 0;
+  /* margin: 0;*/
   /* Create the width of the flex container*/
   width: 630px;
   /* Create temporary borders to make life easier*/
@@ -106,7 +106,7 @@
 }
 
 .medium {
-  margin: 0;
+  /* margin: 0;*/
   /* Create the width of the flex container*/
   width: 300px;
   /* Create temporary borders to make life easier*/
@@ -115,7 +115,7 @@
 }
 
 .small {
-  margin: 0;
+  /* margin: 0;*/
   /* Create the width of the flex container*/
   width: 240px;
   /* Create temporary borders to make life easier*/
