Attempt to align items to the top of each column ver4.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -120,11 +120,12 @@
 }
 
 .column p{
-  margin: 0 auto;
+  margin: auto;
   border: 1px solid blue;
 }
 
 .column h2{
+  margin: auto;
   border: 1px solid orange;
 }
 
